--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <div class="container">
     <div class="one">
       <h1 class="one">
-        <span data-node-name="">Hey</span>
-        <span data-node-name="">Riya</span>
+        <span data-node-name>Hey</span>
+        <span data-node-name>Riya</span>
       </h1>
       <p class="two" data-node-name="greetingText">I really like your name btw!</p>
     </div>
