--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <div class="container">
     <div class="one">
-      <h1 class="one">
+      <h1 class="onee">
         <span data-node-name="greeting">Hey</span>
         <span data-node-name="name">Riya</span>
       </h1>
