--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
 <body>
   <div class="container">
-    <div class="one">
-      <h1 class="onee">
+    <div>
+      <h1>
         <span data-node-name="greeting">Hey</span>
         <span data-node-name="name">Riya</span>
       </h1>
